# Reactor-Server---Movie-rental-service

Client/Boost_Echo_Client/: makefile
Client/Boost_Echo_Client/src/: BBclient.cpp
Client/src/: BBclient.cpp
Server/: pom.xml
Server/Database/: Movies.json  Users.json
Server/spl-net/: example_Users.json  pom.xml
Server/spl-net/src/main/java/bgu/spl181/net/impl/: ConnectionsImpl.java
Server/spl-net/src/main/java/bgu/spl181/net/impl/BBreactor/: ReactorMain.java
Server/spl-net/src/main/java/bgu/spl181/net/impl/BBtpc/: TPCMain.java
Server/spl-net/src/main/java/bgu/spl181/net/impl/TestServer/: TestClient.java  TestMessageEncoderDecoder.java  TestProtocol.java  TestServer.java
Server/spl-net/src/main/java/bgu/spl181/net/impl/bidi/: BidiMessagingProtocolImpl.java  ConnectionsImpl.java  Result.java  (+3 more)
Server/spl-net/src/main/java/bgu/spl181/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java  TestServer.java
Server/src/main/java/bgu/spl181/net/api/bidi/: CommandInterface.java
Server/src/main/java/bgu/spl181/net/impl/BBreactor/: ReactorMain.java
Server/src/main/java/bgu/spl181/net/impl/BBtpc/: TPCMain.java
Server/src/main/java/bgu/spl181/net/impl/TestServer/: TestServer.java
Server/src/main/java/bgu/spl181/net/impl/bidi/: Service.java
Server/src/main/java/bgu/spl181/net/impl/echo/: EchoClient.java
Server/src/main/java/bgu/spl181/net/srv/: BlockingConnectionHandler.java  NonBlockingConnectionHandler.java
client/: CMakeLists.txt
client/Boost_Echo_Client/src/: BBclient.cpp
(+28 files in other folders)
